[package]
name = "nix-crucible"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
pollster = "0.3.0"
serde = { version = "1.0.208", features = ["derive", "serde_derive"] }
serde_json = "1.0.126"
tokio = { version = "1.39.3", features = ["full"] }
vizia = { git = "https://github.com/vizia/vizia", features = [
  "wayland",
  "clipboard",
  # "embedded_fonts",
  "winit",
] }
xdg = "2.5.2"
